--- a/shang.html
+++ b/shang.html
@@ -184,7 +184,7 @@
 				<img src="images/1(1).jpg" height="183" width="200" alt="" class="z_bottom01">
 				<img src="images/2.jpg" height="183" width="200" alt="" class="z_bottom01">
 				<img src="images/3(1).png" height="183" width="200" alt="" class="z_bottom01">
-				<a href="https://lxbcc.github.io/webbigwork/shang2.html"><img src="images/qqq.png" height="183" width="200" alt="" class="z_bottom01"></a>S
+				<a href="https://lxbcc.github.io/webbigwork2/shang2.html"><img src="images/qqq.png" height="183" width="200" alt="" class="z_bottom01"></a>S
 			</div>
 		</div>
 		<div class="z_right">
